--- a/index.html
+++ b/index.html
@@ -1,1 +1,222 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Vikrant V Kamble - Economics PhD Student">
+  <title>Vikrant V Kamble</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+    .navbar {
+      background-color: #0a3d62;
+      overflow: hidden;
+      display: flex;
+      justify-content: space-between;
+    }
+    .navbar-left {
+      color: white;
+      padding: 14px 16px;
+      display: inline-block;
+    }
+    .navbar-right a {
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      display: inline-block;
+    }
+    .navbar a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+    .content {
+      margin: 40px 7cm; /* Increased margin to 7 cm */
+    }
+    .header {
+      display: flex;
+      align-items: center;
+      margin-bottom: 20px;
+    }
+    .profile-photo {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-right: 20px;
+      border: 2px solid #0a3d62;
+    }
+    .header-text {
+      flex-grow: 1;
+    }
+    h1, h2 {
+      color: #333;
+    }
+    p {
+      margin: 10px 0;
+    }
+    .section {
+      margin-bottom: 40px;
+    }
+    .social-links a {
+      margin-right: 10px;
+      text-decoration: none;
+      color: #0a3d62;
+    }
+    .hidden {
+      display: none;
+    }
+    .last-updated {
+      position: fixed;
+      bottom: 10px;
+      right: 10px;
+      font-size: 12px;
+      color: #333;
+    }
+  </style>
+</head>
+<body>
+  <!-- Navbar -->
+  <div class="navbar">
+    <div class="navbar-left">
+      Vikrant V Kamble
+    </div>
+    <div class="navbar-right">
+      <a href="#home" onclick="showSection('home')">Home</a>
+      <a href="#research" onclick="showSection('research')">Research</a>
+      <a href="#teaching" onclick="showSection('teaching')">Teaching</a>
+      <a href="#resources" onclick="showSection('resources')">Resources</a> <!-- Resources section in Navbar -->
+    </div>
+  </div>
+  
+  <!-- Content -->
+  <div class="content">
+    <!-- Home Section -->
+    <div id="home" class="header">
+      <img src="pic1.png" alt="Profile photo of Vikrant Vilas Kamble" class="profile-photo">
+      <div class="header-text">
+        <h1>Welcome! My name is Vikrant.</h1>
+        <p>I am a 4th-year PhD candidate in Economics at the University of Delaware, specializing in Labor, Health, Education, Crime, and Policy Evaluation across the USA and India. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime. My work has been published in Social Science Research. I use STATA, R, and Python for analysis.</p>
+        <p>As a teaching assistant for undergraduate and graduate courses, I focus on causal inference methods, particularly advanced difference-in-differences (DiD) techniques. This experience has enhanced both my teaching abilities and technical expertise in causal methods.</p>
+        <p>Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a></p>
+        <div class="social-links">
+          <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en" target="_blank">Google Scholar</a>
+          <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a>
+          <a href="https://x.com/Vikrant_V_" target="_blank">Twitter</a>
+        </div>
+      </div>
+    </div>
+    
+    <!-- Research Section -->
+    <div id="research" class="section hidden">
+      <h2>Research</h2>
+      <h3>Publications</h3>
+      <p>"Noncustodial parents, instrumental networks, and child support compliance" with Quentin H. Riser, Daniel R. Meyer, and Lawrence M. Berger. <i>Social Science Research</i>, Volume 110, February 2023, 102850</p>
+      <h3>Research in Progress</h3>
+      <ul>
+        <li>Intertemporal Elasticity of Labor Supply for Taxicab drivers: Evidence using a new instrument (USA) (co-authored)</li>
+        <li>Labor Market Consequences of Cycling Program using DiD (Non-USA)</li>
+        <li>Causal Effects of CTE Pathways and Career Clusters on Secondary and Postsecondary Outcomes (USA) (co-authored)</li>
+        <li>Effect of Medicaid Expansion on Crime in Big Cities (USA) (co-authored)</li>
+      </ul>
+    </div>
+
+    <!-- Teaching Section -->
+    <div id="teaching" class="section hidden">
+      <h2>Teaching</h2>
+      <h3>Instructor</h3>
+      <p>I will be teaching ECON101: Introduction to Microeconomics in Winter 2025.</p>
+      <h3>TA Courses</h3>
+      <p>Graduate Courses:</p>
+    <ul>
+      <li>ECON814 | Macroeconomics Theory II | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
+      <li>ECON824 | Econometrics of Cross-Section and Panel Data | Fall 2023, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a></li>
+    </ul>
+    <p>Undergraduate Courses:</p>
+    <ul>
+      <li>ECON301 | Intermediate Micro with Calculus | Fall 2021 | <a href="https://www.udel.edu/faculty-staff/experts/desmond-toohey/" target="_blank">Dr. Desmond Toohey</a></li>
+      <li>ECON304 | Quantitative Macroeconomic Theory | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
+      <li>ECON422 | Econometric Methods and Models | Fall 2022, Fall 2023, Spring 2024, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a> and <a href="https://lerner.udel.edu/faculty-staff-directory/olga-gorbachev/" target="_blank">Dr. Olga Gorbachev</a></li>
+    </ul>
+
+    </div>
+
+    <!-- Resources Section -->
+    <div id="resources" class="section hidden">
+      <h2>Resources</h2>
+      <h3><u>Stata Resources</u></h3>
+      <ul>
+        <li><a href="https://www.sscc.wisc.edu/statistics/stata/" target="_blank">University of Wisconsin - Madison</a></li>
+        <li><a href="https://www.princeton.edu/~otorres/Stata/" target="_blank">Princeton University</a></li>
+        <li><a href="https://stats.oarc.ucla.edu/stata/" target="_blank">UCLA Statistical Consulting Group</a></li>
+        <li><a href="https://sociology.fas.harvard.edu/need-help-basic-stata" target="_blank">Harvard University IQSS</a></li>
+      </ul>
+      <h3><u>LaTeX Resources</u></h3>
+      <ul>
+        <li><a href="https://www.overleaf.com/latex/templates" target="_blank">Overleaf Templates</a></li>
+      </ul>
+
+      <h3><u>Data Resources</u></h3>
+      <h4>Surveys</h4>
+      <ul>
+        <li><a href="https://www.ipums.org/" target="_blank">IPUMS</a></li>
+        <li><a href="https://www.census.gov/programs-surveys/cps.html" target="_blank">Current Population Survey (CPS)</a></li>
+        <li><a href="https://www.nber.org/research/data?page=1&perPage=50" target="_blank">NBER Public Use Data Archive</a></li>
+      </ul>
+
+      <h4>Health-related Surveys</h4>
+      <ul>
+      <li><a href="https://www.cdc.gov/nchs/nhis/index.htm" target="_blank">National Health Interview Survey (NHIS)</a></li>
+      <li><a href="https://www.cdc.gov/brfss/index.html" target="_blank">Behavioral Risk Factor Surveillance System (BRFSS)</a></li>
+      <li><a href="https://www.cdc.gov/nchs/nhanes/index.htm" target="_blank">National Health and Nutrition Examination Survey (NHANES)</a></li>
+      <li><a href="https://www.meps.ahrq.gov/mepsweb/" target="_blank">Medical Expenditure Panel Survey (MEPS)</a></li>
+      <li><a href="https://nsduhweb.rti.org/respweb/homepage.cfm" target="_blank">National Survey on Drug Use and Health (NSDUH)</a></li>
+      <li><a href="https://www.cdc.gov/healthyyouth/data/yrbs/index.htm" target="_blank">Youth Risk Behavior Surveillance System (YRBSS)</a></li>
+      <li><a href="https://www.cdc.gov/nchs/namcs/about/?CDC_AAref_Val=https://www.cdc.gov/nchs/ahcd/about_ahcd.htm" target="_blank">National Ambulatory Medical Care Survey (NAMCS)</a></li>
+      <li><a href="https://www.cdc.gov/nchs/nhamcs/about/?CDC_AAref_Val=https://www.cdc.gov/nchs/ahcd/about_ahcd.htm" target="_blank">National Hospital Ambulatory Medical Care Survey (NHAMCS)</a></li>
+      <li><a href="https://www.hcup-us.ahrq.gov/" target="_blank">Healthcare Cost and Utilization Project (HCUP)</a></li>
+      <li><a href="https://www.cdc.gov/nchs/nvss/index.htm" target="_blank">National Vital Statistics System (NVSS)</a></li>
+      <li><a href="https://www.bls.gov/tus/" target="_blank">American Time Use Survey (ATUS)</a></li>
+      <li><a href="https://seer.cancer.gov/" target="_blank">Surveillance, Epidemiology, and End Results Program (SEER)</a></li>
+      <li><a href="https://www.niaaa.nih.gov/research/nesarc-iii" target="_blank">National Epidemiologic Survey on Alcohol and Related Conditions (NESARC)</a></li>
+      </ul>
+
+
+    </div>
+  </div>
+
+  <!-- Last Updated Section -->
+  <div class="last-updated" id="last-updated">
+    Last updated on: <span id="update-date"></span>
+  </div>
+
+  <!-- JavaScript for Section Navigation and Last Updated Date -->
+  <script>
+    function showSection(section) {
+      const sections = ['home', 'research', 'teaching', 'resources'];
+      sections.forEach(s => {
+        document.getElementById(s).classList.add('hidden');
+      });
+      document.getElementById(section).classList.remove('hidden');
+    }
+
+    // Show home section by default on page load
+    document.addEventListener('DOMContentLoaded', function() {
+      showSection('home');
+      
+      // Automatically set the last updated date
+      const lastUpdatedDate = new Date(document.lastModified);
+      document.getElementById('update-date').textContent = lastUpdatedDate.toLocaleDateString('en-US', {
+        year: 'numeric',
+        month: 'long',
+        day: 'numeric'
+      });
+    });
+  </script>
+</body>
+</html>
 
