--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Vikrant V Kamble - Economics PhD Student">
-  <title>Vikrant V... Kamble</title>
+  <title>Vikrant V Kamble</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -132,7 +132,9 @@
       <img src="pic1.png" alt="Profile photo of Vikrant Vilas Kamble" class="profile-photo">
       <div class="header-text">
         <h1>Welcome! My name is Vikrant.</h1>
-        <p>I am a 4th-year PhD candidate in Economics at the University of Delaware...</p>
+        <p>I am a 4th-year PhD candidate in Economics at the University of Delaware, specializing in Labor, Health, Education, Crime, and Policy Evaluation across the USA and India. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime. My work has been published in Social Science Research. I use STATA, R, and Python for analysis.</p>
+        <p>As a teaching assistant for undergraduate and graduate courses, I focus on causal inference methods, particularly advanced difference-in-differences (DiD) techniques. This experience has enhanced both my teaching abilities and technical expertise in causal methods.</p>
+        <p>Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a></p>
         <div class="social-links">
           <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en" target="_blank">Google Scholar</a>
           <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a>
@@ -144,19 +146,51 @@
     <!-- Research Section -->
     <div id="research" class="section hidden">
       <h2>Research</h2>
-      <!-- Add your research content here -->
+      <h3>Publications</h3>
+      <p>"Noncustodial parents, instrumental networks, and child support compliance" with Quentin H. Riser, Daniel R. Meyer, and Lawrence M. Berger. <i>Social Science Research</i>, Volume 110, February 2023, 102850</p>
+      <h3>Research in Progress</h3>
+      <ul>
+        <li>Intertemporal Elasticity of Labor Supply for Taxicab drivers: Evidence using a new instrument (USA) (co-authored)</li>
+        <li>Labor Market Consequences of Cycling Program using DiD (Non-USA)</li>
+        <li>Causal Effects of CTE Pathways and Career Clusters on Secondary and Postsecondary Outcomes (USA) (co-authored)</li>
+        <li>Effect of Medicaid Expansion on Crime in Big Cities (USA) (co-authored)</li>
+      </ul>
     </div>
 
     <!-- Teaching Section -->
     <div id="teaching" class="section hidden">
       <h2>Teaching</h2>
-      <!-- Add your teaching content here -->
+      <h3>Instructor</h3>
+      <p>I will be teaching ECON101: Introduction to Microeconomics in Winter 2025.</p>
+      <h3>TA Courses</h3>
+      <p>Graduate Courses:</p>
+      <ul>
+        <li>ECON814 | Macroeconomics Theory II | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
+        <li>ECON824 | Econometrics of Cross-Section and Panel Data | Fall 2023, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a></li>
+      </ul>
+      <p>Undergraduate Courses:</p>
+      <ul>
+        <li>ECON301 | Intermediate Micro with Calculus | Fall 2021 | <a href="https://www.udel.edu/faculty-staff/experts/desmond-toohey/" target="_blank">Dr. Desmond Toohey</a></li>
+        <li>ECON304 | Quantitative Macroeconomic Theory | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
+        <li>ECON422 | Econometric Methods and Models | Fall 2022, Fall 2023, Spring 2024, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a> and <a href="https://lerner.udel.edu/faculty-staff-directory/olga-gorbachev/" target="_blank">Dr. Olga Gorbachev</a></li>
+      </ul>
     </div>
 
     <!-- Resources Section -->
     <div id="resources" class="section hidden">
       <h2>Resources</h2>
-      <!-- Add your resources content here -->
+      <h3><u>Stata Resources</u></h3>
+      <ul>
+        <li><a href="https://www.sscc.wisc.edu/statistics/stata/" target="_blank">University of Wisconsin - Madison</a></li>
+        <li><a href="https://www.princeton.edu/~otorres/Stata/" target="_blank">Princeton University</a></li>
+        <li><a href="https://stats.oarc.ucla.edu/stata/" target="_blank">UCLA Statistical Consulting Group</a></li>
+        <li><a href="https://sociology.fas.harvard.edu/need-help-basic-stata" target="_blank">Harvard University IQSS</a></li>
+      </ul>
+      <h3><u>LaTeX Resources</u></h3>
+      <ul>
+        <li><a href="https://www.overleaf.com/" target="_blank">Overleaf</a></li>
+        <li><a href="https://www.latex-project.org/" target="_blank">LaTeX Project</a></li>
+      </ul>
     </div>
   </div>
 
