--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   <!-- Content -->
   <div class="content">
     <!-- Home Section -->
-    <div id="home" class="header">
+    <div id="home" class="header section hidden">
       <img src="pic1.png" alt="Profile photo of Vikrant Vilas Kamble" class="profile-photo">
       <div class="header-text">
         <h1>Welcome! My name is Vikrant.</h1>
@@ -195,14 +195,7 @@
 
       <h3><u>Data Resources</u></h3>
 
-      <h4>Surveys</h4>
-      <ul>
-        <li><a href="https://www.ipums.org/" target="_blank">IPUMS</a></li>
-        <li><a href="https://www.census.gov/programs-surveys/cps.html" target="_blank">Current Population Survey (CPS)</a></li>
-        <li><a href="https://www.nber.org/research/data?page=1&perPage=50" target="_blank">NBER Public Use Data Archive</a></li>
-      </ul>
-
-      <h4>Health-related Surveys</h4>
+<h4>Health-related Surveys</h4>
       <ul>
         <li><a href="https://www.cdc.gov/nchs/nhis/index.htm" target="_blank">National Health Interview Survey (NHIS)</a></li>
         <li><a href="https://www.cdc.gov/brfss/index.html" target="_blank">Behavioral Risk Factor Surveillance System (BRFSS)</a></li>
@@ -217,6 +210,13 @@
         <li><a href="https://www.bls.gov/tus/" target="_blank">American Time Use Survey (ATUS)</a></li>
         <li><a href="https://seer.cancer.gov/" target="_blank">Surveillance, Epidemiology, and End Results Program (SEER)</a></li>
         <li><a href="https://www.niaaa.nih.gov/research/nesarc-iii" target="_blank">National Epidemiologic Survey on Alcohol and Related Conditions (NESARC)</a></li>
+      </ul>
+
+
+      <h4>Working Papers and Repositories</h4>
+      <ul>
+        <li><a href="https://www.nber.org/" target="_blank">National Bureau of Economic Research (NBER)</a></li>
+        <li><a href="https://www.repec.org/" target="_blank">RePEc</a></li>
       </ul>
     </div>
   </div>
