--- a/index.html
+++ b/index.html
@@ -10,104 +10,70 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      line-height: 1.6;
+      text-align: center;
+      color: #333;
     }
     .navbar {
-      background-color: #0a3d62;
-      overflow: hidden;
+      background-color: #1c3b57;
+      color: white;
       display: flex;
       justify-content: space-between;
+      padding: 15px;
+      font-weight: bold;
     }
     .navbar-left {
-      color: white;
-      padding: 14px 16px;
-      display: inline-block;
+      margin-left: 20px;
     }
     .navbar-right a {
       color: white;
-      text-align: center;
-      padding: 14px 16px;
       text-decoration: none;
-      display: inline-block;
+      margin: 0 10px;
     }
-    .navbar a:hover {
-      background-color: #ddd;
-      color: black;
+    .navbar-right a:hover {
+      color: #ddd;
     }
     .content {
-      margin: 40px 7cm;
-      text-align: justify; /* Justifies the text in the content section */
+      margin: 20px auto;
+      max-width: 800px;
+      text-align: left;
+      line-height: 1.6;
     }
     .header {
-      display: flex;
-      align-items: center;
-      margin-bottom: 20px;
+      text-align: center;
     }
     .profile-photo {
-      width: 150px;
-      height: 150px;
+      max-width: 150px;
       border-radius: 50%;
-      object-fit: cover;
-      margin-right: 20px;
-      border: 2px solid #0a3d62;
+      margin: 20px;
     }
-    .header-text {
-      flex-grow: 1;
-    }
-    h1, h2 {
+    h1, h2, h3 {
       color: #333;
     }
     p {
       margin: 10px 0;
     }
-    .section {
-      margin-bottom: 40px;
-    }
     .social-links a {
-      margin-right: 10px;
+      margin: 0 5px;
+      color: #1c3b57;
       text-decoration: none;
-      color: #0a3d62;
+    }
+    .social-links a:hover {
+      text-decoration: underline;
+    }
+    .last-updated {
+      font-size: 0.9em;
+      color: #888;
+      margin-top: 20px;
     }
     .hidden {
       display: none;
     }
-    .last-updated {
-      position: fixed;
-      bottom: 10px;
-      right: 10px;
-      font-size: 12px;
-      color: #333;
-    }
 
-    /* Mobile-specific styles */
+    /* Responsive adjustments */
     @media (max-width: 768px) {
       .navbar {
         flex-direction: column;
-      }
-      .navbar-left, .navbar-right a {
-        padding: 10px;
         text-align: center;
-        width: 100%;
-      }
-      .content {
-        margin: 20px;
-      }
-      .profile-photo {
-        width: 100px;
-        height: 100px;
-        margin: 0 auto 10px auto;
-      }
-      .header {
-        flex-direction: column;
-        text-align: center;
-      }
-      .header-text {
-        margin: 0;
-      }
-      .last-updated {
-        position: static;
-        text-align: center;
-        margin-top: 20px;
       }
     }
   </style>
@@ -129,7 +95,7 @@
   <!-- Content -->
   <div class="content">
     <!-- Home Section -->
-    <div id="home" class="header section hidden">
+    <div id="home" class="header section">
       <img src="pic1.png" alt="Profile photo of Vikrant Vilas Kamble" class="profile-photo">
       <div class="header-text">
         <h1>Welcome! My name is Vikrant.</h1>
@@ -173,11 +139,7 @@
       <ul>
         <li>ECON301 | Intermediate Micro with Calculus | Fall 2021 | <a href="https://www.udel.edu/faculty-staff/experts/desmond-toohey/" target="_blank">Dr. Desmond Toohey</a></li>
         <li>ECON304 | Quantitative Macroeconomic Theory | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
-<li>
-  ECON422 | Econometric Methods and Models | Fall 2022, Fall 2023, Spring 2024, Fall 2024 | 
-  <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a> and 
-  <a href="https://lerner.udel.edu/faculty-staff-directory/olga-gorbachev/" target="_blank">Dr. Olga Gorbachev</a>
-</li>
+        <li>ECON422 | Econometric Methods and Models | Fall 2022, Fall 2023, Spring 2024, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a> and <a href="https://lerner.udel.edu/faculty-staff-directory/olga-gorbachev/" target="_blank">Dr. Olga Gorbachev</a></li>
       </ul>
     </div>
 
@@ -199,8 +161,7 @@
       </ul>
 
       <h3><u>Data Resources</u></h3>
-
-<h4>Health-related Surveys</h4>
+      <h4>Health-related Surveys</h4>
       <ul>
         <li><a href="https://www.cdc.gov/nchs/nhis/index.htm" target="_blank">National Health Interview Survey (NHIS)</a></li>
         <li><a href="https://www.cdc.gov/brfss/index.html" target="_blank">Behavioral Risk Factor Surveillance System (BRFSS)</a></li>
@@ -216,34 +177,18 @@
         <li><a href="https://seer.cancer.gov/" target="_blank">Surveillance, Epidemiology, and End Results Program (SEER)</a></li>
         <li><a href="https://www.niaaa.nih.gov/research/nesarc-iii" target="_blank">National Epidemiologic Survey on Alcohol and Related Conditions (NESARC)</a></li>
       </ul>
-
     </div>
   </div>
 
-  <!-- Last Updated Section -->
-  <div class="last-updated" id="last-updated">
-    Last updated on: <span id="update-date"></span>
-  </div>
-
-  <!-- JavaScript for Section Navigation and Last Updated Date -->
   <script>
-    function showSection(section) {
-      const sections = ['home', 'research', 'teaching', 'resources'];
-      sections.forEach(s => {
-        document.getElementById(s).classList.add('hidden');
-      });
-      document.getElementById(section).classList.remove('hidden');
+    function showSection(sectionId) {
+      const sections = document.querySelectorAll('.section');
+      sections.forEach(section => section.classList.add('hidden'));
+      document.getElementById(sectionId).classList.remove('hidden');
     }
 
-    document.addEventListener('DOMContentLoaded', function() {
-      showSection('home');
-      const lastUpdatedDate = new Date(document.lastModified);
-      document.getElementById('update-date').textContent = lastUpdatedDate.toLocaleDateString('en-US', {
-        year: 'numeric',
-        month: 'long',
-        day: 'numeric'
-      });
-    });
+    // Set default section as Home
+    showSection('home');
   </script>
 </body>
 </html>
