--- a/index.html
+++ b/index.html
@@ -3,81 +3,89 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Vikrant V Kamble - Economics PhD Student">
-  <title>Vikrant V Kamble</title>
+  <title>Vikrant Kamble</title>
   <style>
+    /* Global Styles */
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      color: #333;
-      text-align: center;
-    }
-    .navbar {
-      background-color: #1c3b57;
-      color: white;
-      display: flex;
-      justify-content: center;
-      padding: 15px;
-      font-weight: bold;
-    }
-    .navbar a {
-      color: white;
-      text-decoration: none;
-      margin: 0 20px;
-      font-size: 18px;
-    }
-    .navbar a:hover {
-      color: #ddd;
-    }
-    .content {
-      margin: 20px auto;
-      max-width: 800px;
-      text-align: justify;
-      line-height: 1.6;
-    }
-    .header {
-      text-align: center;
-    }
-    .profile-photo {
-      max-width: 150px;
-      margin: 20px;
-    }
-    h1, h2, h3 {
-      color: #333;
-    }
-    p {
-      margin: 10px 0;
-    }
-    .social-links a {
-      margin: 0 5px;
-      color: #1c3b57;
-      text-decoration: none;
-    }
-    .social-links a:hover {
-      text-decoration: underline;
-    }
-    .last-updated {
-      font-size: 0.9em;
-      color: #888;
-      margin-top: 20px;
-    }
-    .hidden {
-      display: none;
     }
 
-    /* Responsive adjustments */
-    @media (max-width: 768px) {
-      .navbar {
-        flex-direction: column;
-      }
-      .navbar a {
-        margin: 10px 0;
-      }
+    /* Header Title Section */
+    .title-section {
+      text-align: center;
+      margin-top: 40px;
+      font-size: 1.8em;
+      font-weight: bold;
+      color: #333;
+    }
+    .subtitle-section {
+      text-align: center;
+      font-size: 1em;
+      color: #777;
+      margin-top: 8px;
+    }
+
+    /* Navbar Styles */
+    .navbar {
+      background-color: #2F3E56; /* Updated color */
+      color: #ffffff;
+      display: flex;
+      justify-content: center;
+      padding: 10px 0;
+    }
+    .navbar a {
+      color: #ffffff;
+      text-decoration: none;
+      margin: 0 20px;
+      font-weight: bold;
+      font-size: 1.1em;
+    }
+    .navbar a:hover {
+      text-decoration: underline;
+    }
+
+    /* Content Section */
+    .content {
+      padding: 20px;
+      text-align: justify; /* Ensures text justification */
+    }
+
+    /* Profile Photo */
+    .profile-photo {
+      display: block;
+      margin: 20px auto;
+      width: 200px; /* Larger and rectangular */
+      height: auto;
+    }
+
+    /* Section Styles */
+    .section {
+      display: none; /* Hidden by default */
+    }
+    .section.active {
+      display: block;
+    }
+
+    /* Social Links */
+    .social-links {
+      text-align: center;
+      margin-top: 20px;
+    }
+    .social-links a {
+      margin: 0 10px;
+      text-decoration: none;
+      color: #2F3E56;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
+  <!-- Title and Subtitle -->
+  <div class="title-section">Vikrant Kamble</div>
+  <div class="subtitle-section">University of Delaware, Department of Economics</div>
+
   <!-- Navbar -->
   <div class="navbar">
     <a href="#home" onclick="showSection('home')">Home</a>
@@ -85,27 +93,25 @@
     <a href="#teaching" onclick="showSection('teaching')">Teaching</a>
     <a href="#resources" onclick="showSection('resources')">Resources</a>
   </div>
-  
+
   <!-- Content -->
   <div class="content">
     <!-- Home Section -->
-    <div id="home" class="header section">
-      <img src="pic1.png" alt="Profile photo of Vikrant Vilas Kamble" class="profile-photo">
-      <div class="header-text">
-        <h1>Welcome! My name is Vikrant.</h1>
-        <p>I am a 4th-year PhD candidate in Economics at the University of Delaware, specializing in Labor, Health, Education, Crime, and Policy Evaluation across the USA and India. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime. My work has been published in Social Science Research. I use STATA, R, and Python for analysis.</p>
-        <p>As a teaching assistant for undergraduate and graduate courses, I focus on causal inference methods, particularly advanced difference-in-differences (DiD) techniques. This experience has enhanced both my teaching abilities and technical expertise in causal methods.</p>
-        <p>Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a></p>
-        <div class="social-links">
-          <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en" target="_blank">Google Scholar</a>
-          <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a>
-          <a href="https://x.com/Vikrant_V_" target="_blank">Twitter</a>
-        </div>
+    <div id="home" class="section active">
+      <img src="pic1.png" alt="Profile photo of Vikrant Kamble" class="profile-photo">
+      <h1>Welcome! My name is Vikrant.</h1>
+      <p>I am a 4th-year PhD candidate in Economics at the University of Delaware, specializing in Labor, Health, Education, Crime, and Policy Evaluation across the USA and India. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime. My work has been published in Social Science Research. I use STATA, R, and Python for analysis.</p>
+      <p>As a teaching assistant for undergraduate and graduate courses, I focus on causal inference methods, particularly advanced difference-in-differences (DiD) techniques. This experience has enhanced both my teaching abilities and technical expertise in causal methods.</p>
+      <p>Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a></p>
+      <div class="social-links">
+        <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en" target="_blank">Google Scholar</a>
+        <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a>
+        <a href="https://x.com/Vikrant_V_" target="_blank">Twitter</a>
       </div>
     </div>
     
     <!-- Research Section -->
-    <div id="research" class="section hidden">
+    <div id="research" class="section">
       <h2>Research</h2>
       <h3>Publications</h3>
       <p>"Noncustodial parents, instrumental networks, and child support compliance" with Quentin H. Riser, Daniel R. Meyer, and Lawrence M. Berger. <i>Social Science Research</i>, Volume 110, February 2023, 102850</p>
@@ -119,7 +125,7 @@
     </div>
 
     <!-- Teaching Section -->
-    <div id="teaching" class="section hidden">
+    <div id="teaching" class="section">
       <h2>Teaching</h2>
       <h3>Instructor</h3>
       <p>I will be teaching ECON101: Introduction to Microeconomics in Winter 2025.</p>
@@ -138,51 +144,35 @@
     </div>
 
     <!-- Resources Section -->
-    <div id="resources" class="section hidden">
+    <div id="resources" class="section">
       <h2>Resources</h2>
-      
-      <h3><u>Stata Resources</u></h3>
+      <h3>Stata Resources</h3>
       <ul>
         <li><a href="https://www.sscc.wisc.edu/statistics/stata/" target="_blank">University of Wisconsin - Madison</a></li>
         <li><a href="https://www.princeton.edu/~otorres/Stata/" target="_blank">Princeton University</a></li>
         <li><a href="https://stats.oarc.ucla.edu/stata/" target="_blank">UCLA Statistical Consulting Group</a></li>
         <li><a href="https://sociology.fas.harvard.edu/need-help-basic-stata" target="_blank">Harvard University IQSS</a></li>
       </ul>
-
-      <h3><u>LaTeX Resources</u></h3>
+      <h3>LaTeX Resources</h3>
       <ul>
         <li><a href="https://www.overleaf.com/latex/templates" target="_blank">Overleaf Templates</a></li>
       </ul>
-
-      <h3><u>Data Resources</u></h3>
-      <h4>Health-related Surveys</h4>
+      <h3>Data Resources</h3>
       <ul>
         <li><a href="https://www.cdc.gov/nchs/nhis/index.htm" target="_blank">National Health Interview Survey (NHIS)</a></li>
         <li><a href="https://www.cdc.gov/brfss/index.html" target="_blank">Behavioral Risk Factor Surveillance System (BRFSS)</a></li>
-        <li><a href="https://www.cdc.gov/nchs/nhanes/index.htm" target="_blank">National Health and Nutrition Examination Survey (NHANES)</a></li>
-        <li><a href="https://www.meps.ahrq.gov/mepsweb/" target="_blank">Medical Expenditure Panel Survey (MEPS)</a></li>
-        <li><a href="https://nsduhweb.rti.org/respweb/homepage.cfm" target="_blank">National Survey on Drug Use and Health (NSDUH)</a></li>
-        <li><a href="https://www.cdc.gov/healthyyouth/data/yrbs/index.htm" target="_blank">Youth Risk Behavior Surveillance System (YRBSS)</a></li>
-        <li><a href="https://www.cdc.gov/nchs/namcs/about/?CDC_AAref_Val=https://www.cdc.gov/nchs/ahcd/about_ahcd.htm" target="_blank">National Ambulatory Medical Care Survey (NAMCS)</a></li>
-        <li><a href="https://www.cdc.gov/nchs/nhamcs/about/?CDC_AAref_Val=https://www.cdc.gov/nchs/ahcd/about_ahcd.htm" target="_blank">National Hospital Ambulatory Medical Care Survey (NHAMCS)</a></li>
-        <li><a href="https://www.hcup-us.ahrq.gov/" target="_blank">Healthcare Cost and Utilization Project (HCUP)</a></li>
-        <li><a href="https://www.cdc.gov/nchs/nvss/index.htm" target="_blank">National Vital Statistics System (NVSS)</a></li>
-        <li><a href="https://www.bls.gov/tus/" target="_blank">American Time Use Survey (ATUS)</a></li>
-        <li><a href="https://seer.cancer.gov/" target="_blank">Surveillance, Epidemiology, and End Results Program (SEER)</a></li>
-        <li><a href="https://www.niaaa.nih.gov/research/nesarc-iii" target="_blank">National Epidemiologic Survey on Alcohol and Related Conditions (NESARC)</a></li>
+        <li><a href="https://fred.stlouisfed.org/" target="_blank">Federal Reserve Economic Data (FRED)</a></li>
       </ul>
     </div>
   </div>
 
+  <!-- JavaScript for Tab Navigation -->
   <script>
     function showSection(sectionId) {
       const sections = document.querySelectorAll('.section');
-      sections.forEach(section => section.classList.add('hidden'));
-      document.getElementById(sectionId).classList.remove('hidden');
+      sections.forEach(section => section.classList.remove('active'));
+      document.getElementById(sectionId).classList.add('active');
     }
-
-    // Set default section as Home
-    showSection('home');
   </script>
 </body>
 </html>
