--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     /* Navbar Styles */
     .navbar {
-      background-color: #ADD8E6; /* Light Blue */
+      background-color: #1E2A47; /* Slightly darker blue (almost black) */
       color: #ffffff;
       display: flex;
       justify-content: center;
@@ -102,8 +102,10 @@
       }
 
       .content {
-        margin-left: 2cm;
-        margin-right: 2cm;
+        margin-left: 0;
+        margin-right: 0;
+        padding: 15px;
+        width: 100%; /* Ensure content fits the screen */
       }
 
       .profile-photo {
