--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
+      margin-top: 3cm; /* Added top margin for body */
     }
 
     /* Header Title Section */
@@ -36,6 +37,7 @@
       padding: 10px 0;
       margin-left: 8cm;
       margin-right: 8cm;
+      margin-top: 3cm; /* Added top margin for navbar */
     }
     .navbar a {
       color: #ffffff;
