--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       font-size: 1.8em;
       font-weight: bold;
       color: #333;
-      margin-top: 0; /* Title section should have no top margin */
+      margin-top: 2cm; /* Consistent 2cm gap from the top */
     }
     .subtitle-section {
       text-align: center;
       font-size: 1em;
       color: #777;
-      margin-top: 0; /* Subtitle should have no top margin */
+      margin-top: 0; /* Subtitle has no extra margin */
     }
 
     /* Navbar Styles */
@@ -134,7 +134,7 @@
 </head>
 <body>
   <!-- Title and Subtitle -->
-  <div class="title-section">Vikrant V. Kamble</div>
+  <div class="title-section">Vikrant V.. Kamble</div>
   <div class="subtitle-section">PhD Student, Department of Economics, University of Delaware</div>
 
   <!-- Navbar -->
@@ -190,7 +190,11 @@
       <ul>
         <li>ECON301 | Intermediate Micro with Calculus | Fall 2021 | <a href="https://www.udel.edu/faculty-staff/experts/desmond-toohey/" target="_blank">Dr. Desmond Toohey</a></li>
         <li>ECON304 | Quantitative Macroeconomic Theory | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
-        <li>ECON422 | Econometric Methods and Models | Fall 2022, Fall 2023, Spring 2024, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a> and <a href="https://lerner.udel.edu/faculty-staff-directory/olga-chesnova/" target="_blank">Dr. Olga Chesnova</a></li>
+        <li>ECON422 | Econometric Methods and Models | Fall 2022, Fall 2023, Spring 2024, Fall 2024 | <a href="https://www.bowenxiang.com/" target="_blank">Dr. Bowen Xiang</a></li>
+      </ul>
+      <h3>Guest Lectures</h3>
+      <ul>
+        <li>Instructor-led Sessions on Advanced DiD with Non-parallel Trends</li>
       </ul>
     </div>
 
